--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flowers Image Classification</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    
+    <style>
+        html, body {
+            height: 100%;
+            background-image: url('https://png.pngtree.com/png-clipart/20220916/ourlarge/pngtree-garden-transparent-background-png-image_6178839.png');
+            background-size: cover;
+            background-position: center center;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
@@ -16,15 +23,20 @@
             <input class="form-control" type="file" id="formFile" name="flowerimage">
         </div>
         <div class="mb-2 text-center">
-          <button type="submit" class="btn btn-primary">Predict Image</button>
+            <button type="submit" class="btn btn-primary">Predict Image</button>
         </div>
     </form>
 
     {% if prediction %}
-    <center>
-        <img class="img-fluid" style="max-height: 300px" src="{{img_file}}" alt="Image">
-    </center>
-    <p class="text-center">Prediction result: {{prediction}}</p>
+    <div style="text-align: center;">
+        <img class="img-fluid" style="max-height: 300px" src="{{img_file}}" />
+    </div> 
+    <div style="text-align: center;">
+        <i class="text-center" style="font-style: italic; font-weight: bold;">Prediction result: {{prediction}}</i>
+    </div>
+    <div class="text-center mt-3">
+        <a class="btn btn-primary" href="https://github.com/Dhio19/flower_classification" target="_blank">GitHub Repository</a>
+    </div>
     {% endif %}
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
